# AH_ASS

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile_Db  README.md  ab_test_log.txt  benchmark.sh  docker-compose.yml  index.html  init.sql  requirements.txt
ad-marketing-pipeline/: README.md  mkdocs.yml  pyproject.toml
ad-marketing-pipeline/docs/: index.md
ad-marketing-pipeline/docs/api-reference/: config.md  processors.md  provision_tables.md  run_bronze_to_silver.md  run_silver_to_gold.md  setup_streaming.md  streaming.md
ad-marketing-pipeline/notebooks/orchestration/: run_bronze_to_silver.py  run_silver_to_gold.py  setup_streaming.py
ad-marketing-pipeline/notebooks/setup/: provision_tables.py
ad-marketing-pipeline/site/: 404.html  index.html  objects.inv
ad-marketing-pipeline/site/api-reference/config/: index.html
ad-marketing-pipeline/site/api-reference/processors/: index.html
ad-marketing-pipeline/site/api-reference/streaming/: index.html
ad-marketing-pipeline/site/search/: search_index.json
ad-marketing-pipeline/src/: __init__.py
ad-marketing-pipeline/src/config/: __init__.py  settings.py
ad-marketing-pipeline/src/models/: schemas.py
ad-marketing-pipeline/src/processors/: __init__.py  gold_processor.py  silver_processor.py
ad-marketing-pipeline/src/streaming/: event_hub_streamer.py
ad-marketing-pipeline/src/utils/: database_manager.py
ad-marketing-pipeline/tests/src/: __init__.py
ad-marketing-pipeline/tests/src/test_config/: __init__.py
ad-marketing-pipeline/tests/src/test_processors/: __init__.py  test_gold_processor.py  test_silver_processor.py
ad-marketing-pipeline/tests/src/test_streaming/: test_event_hub_streamer.py
ad-marketing-pipeline/tests/src/test_utils/: test_database_manager.py
app/: README.md  pyproject.toml
app/app/: asgi.py  settings.py  urls.py
app/core/: admin.py  azure_kafka_producer.py  helper.py  kafka_producer.py  models.py  serializers.py  urls.py  utils.py  views.py
app/core/migrations/: 0001_initial.py
app/core/templates/: banner.html
app/core/tests/: test_presigned.py  test_randomize_list.py  test_requirements.py
app/templates/: ads.html  advertiser_budget_update.html  sse.html
infra/: .terraform.lock.hcl  main.tf  outputs.tf  (+2 more)
(+34 files in other folders)
