# pyproject.toml
[tool.poetry]
name = "ad-marketing-pipeline"
version = "0.1.0"
description = "Ad marketing data pipeline for real-time budget management"
authors = ["{name = 'oladayo',email = 'ajadimarvellousgo@gmail.com'}"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
delta-spark = "^3.0.0"
azure-eventhub = "^5.11.0"
databricks-sdk = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"