# pyproject.toml
[tool.poetry]
name = "ad-marketing-pipeline"
version = "0.1.0"
description = "Ad marketing data pipeline for real-time budget management"
authors = ["Oladayo <ajadimarvellousgo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
delta-spark = "^3.0.0"
azure-eventhub = "^5.11.0"
databricks-sdk = "^0.18.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"
mkdocstrings = "^0.29.1"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings-python = "^1.16.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"