[tool.poetry]
name = "ah-ass"
version = "0.1.0"
description = "Django application for budget management"
authors = ["Oladay Ajadi"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5"
black = "^23.3"
isort = "^5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py"]